--- a/HelloWorldApp.Web/Views/Home/Index.cshtml
+++ b/HelloWorldApp.Web/Views/Home/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+  ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-  <h1 class="display-4">Welcome Home</h1>
+  <h1 class="display-4">Welcome Home Namin</h1>
   <p>
     Learn about
     <a href="https://docs.microsoft.com/aspnet/core"
